<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/inputName"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:hint="@string/enterName"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/inputAddress"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enterAddress"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/inputName"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toEndOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/phone"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:id="@+id/inputPhone"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enterPhone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/inputAddress"
        tools:ignore="UnknownId" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputPhone"
        app:layout_constraintTop_toBottomOf="@+id/inputAddress" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/note"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <EditText
        android:id="@+id/inputNote"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enterNote"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toEndOf="@+id/note"
        app:layout_constraintTop_toBottomOf="@+id/inputPhone" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/enterRadio"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note" />

    <RadioGroup
        android:layout_width="330dp"
        android:layout_height="155dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/sameDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sameday"
            android:checked="true"
            android:onClick="radiobot"/>

        <RadioButton
            android:id="@+id/nextDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nextday"
            android:onClick="radiobot" />

        <RadioButton
            android:id="@+id/pickUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pickup"
            android:onClick="radiobot"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>